--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,64 +1,60 @@
-name: Node.js CI
+name: Node CI
 
+# Trigger the workflow on push or pull request
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  - push
+  - pull_request
+
+env:
+  CI: true
 
 jobs:
   build:
-    timeout-minutes: 30
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
 
     strategy:
+      # Node versions list
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [20.x]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      # Check-out repository under GitHub workspace
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@v4
+        # Step's name
+      - name: Use Node.js ${{ matrix.node-version }}
+        # Configures the node version used on GitHub-hosted runners
+        # https://github.com/actions/setup-node
+        uses: actions/setup-node@v4
+        # The Node.js version to configure
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Run linter
+        uses: wearerequired/lint-action@v2
+        with:
+          linters: 'eslint'
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '18.x'
+          cache: 'npm' # Ускоряет повторные сборки
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run lint
-        run: npm run lint
-
-      - name: Run tests
-        run: npm test
-
-      - name: Run coverage
-        run: npm run coverage
-
-      - name: Upload coverage to CodeClimate
+      - name: Test & publish code coverage
+      # Publish code coverage on Code Climate
+      # https://github.com/paambaati/codeclimate-action
+        uses: paambaati/codeclimate-action@v5.0.0
+        # Add Code Climate secret key
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPO_TOKEN }}
-        run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-          chmod +x ./cc-test-reporter
-          ./cc-test-reporter before-build
-          ./cc-test-reporter after-build --exit-code $?
-
-
-          name: Node.js CI
-
-      - name: Clean npm cache and install dependencies
-        run: |
-          npm cache clean --force
-          rm -rf node_modules package-lock.json
-          npm install
-
-      - name: Check ESLint Permissions
-        run: |
-          ls -l node_modules/.bin/eslint
-          chmod +x node_modules/.bin/eslint
-
-      - name: Run ESLint
-        run: npx eslint .
+         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+         coverageCommand: npx jest --coverage
+         debug: true
 
