--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "task1",
+  "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "Выполнение первого задания",
-  "main": "gendiff.js",
+  "description": "[![Actions Status](https://github.com/kakuza73/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/kakuza73/frontend-project-46/actions)",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "gendiff": "node gendiff.js",
-    "lint": "eslint .",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "test": "testing"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^12.1.0",
+    "@jest/globals": "^29.7.0",
+    "commander": "^12.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "eslint": "^9.13.0",
-    "globals": "^15.11.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0"
+  },
+  "bin": {
+    "gendiff": "bin/gendiff.js"
   }
 }
