--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,11 +18,9 @@ rules:
     - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
   no-prototype-builtins: 0
+  import/no-relative-packages: "off"  # Disable this rule to allow relative imports
 
 settings:
   import/resolver:
-    alias:
-      map:
-        - "@hexlet/code": "./parse.js"  # Adjust this path if .parse.js is in another location
-      extensions:
-        - .js
+    extensions:
+      - .js
