--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,25 +1,11 @@
 env:
-  browser: true
-  es2021: true
-  jest: true  
-
+  node: true
+  es2020: true
 extends:
   - airbnb-base
-
 parserOptions:
-  ecmaVersion: latest
+  ecmaVersion: 11
   sourceType: module
-
 rules:
   no-console: 0
-  import/extensions:
-    - error
-    - ignorePackages
-    - js: always
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-  no-prototype-builtins: 0
-
-settings:
-  import/resolver:
-    extensions:
-      - .js
+  import/extensions: 0
