--- a/.github/workflows/differences-check.yml
+++ b/.github/workflows/differences-check.yml
@@ -1,10 +1,9 @@
-name: Node.js CI
+name: Diff Check CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: push
+
+env:
+  CI: true
 
 jobs:
   build:
@@ -12,34 +11,16 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14, 16, 18]
-
+        node-version: [20.x]
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run lint
-      run: npm run lint
-
-    - name: Run tests
-      run: npm test
-
-    - name: Run coverage
-      run: npm run coverage
-
-    - name: Upload coverage to CodeClimate
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPO_TOKEN }}
-      run: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
-        ./cc-test-reporter after-build --exit-code $?
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      
+      - run: make install
+      - run: make lint
+      - run: make test
